- convert models into brand - count only once per row

--- a/Web-scrapper.ipynb
+++ b/Web-scrapper.ipynb
@@ -2,9 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "41384ea1",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-24T21:54:49.122338Z",
+     "start_time": "2024-01-24T21:54:49.118647Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#!/usr/bin/env python3\n",
@@ -18,9 +23,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "ce2664e2",
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2024-01-24T21:54:51.527381Z",
+     "start_time": "2024-01-24T21:54:51.523626Z"
+    }
+   },
    "outputs": [],
    "source": [
     "entries = []\n",
