--- a/Text Analytics Project.ipynb
+++ b/Text Analytics Project.ipynb
@@ -18,16 +18,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "id": "a467c228db62beb2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "#!pip install spacy"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 2,
    "id": "7b1ce00d",
    "metadata": {
@@ -135,14 +125,6 @@
     "    # remove space before and after the text\n",
     "    x = x.strip()\n",
     "    return x"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "eb82b266eff087fb",
-   "metadata": {},
-   "source": [
-    "↑ airline? we might need to fix this to our case"
    ]
   },
   {
@@ -366,24 +348,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 13,
-   "id": "cb9329deee45db67",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-25T01:39:15.597733Z",
-     "start_time": "2024-01-25T01:39:15.574622Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# # save as text\n",
-    "# with open('all_documents.txt', 'w') as f:\n",
-    "#     for item in all_documents:\n",
-    "#         f.write(\"%s\\n\" % item)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "id": "c0ba446e6171200d",
    "metadata": {},
@@ -439,47 +403,7 @@
     "    text = clean_text(text)\n",
     "    # Use a set to store unique tokens\n",
     "    tokens = set(re.findall('[a-zA-Z0-9]{3,}', text))\n",
-    "    return list(tokens)\n",
-    "\n",
-    "# # Create an instance of CountVectorizer with the custom tokenizer\n",
-    "# vectorizer = CountVectorizer(vocabulary=car_brands,\n",
-    "#                              max_features=10,\n",
-    "#                              tokenizer=unique_tokenizer,\n",
-    "#                              token_pattern='[a-zA-Z0-9]{3,}')\n",
-    "\n",
-    "# # Example data\n",
-    "# test = ['BMW, BMW, FORD, FORD']\n",
-    "# \n",
-    "# # Transform the data\n",
-    "# dtm = vectorizer.fit_transform(test)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "id": "c494996393fbf8e2",
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2024-01-25T00:32:00.067839Z",
-     "start_time": "2024-01-25T00:32:00.065201Z"
-    }
-   },
-   "outputs": [],
-   "source": [
-    "# feature_names = vectorizer.get_feature_names_out()\n",
-    "# \n",
-    "# # Convert the document-term matrix to a dense array\n",
-    "# dtm_array = dtm.toarray()\n",
-    "# print(feature_names)\n",
-    "# print(dtm_array)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "8ebe6e1bda5dffac",
-   "metadata": {},
-   "source": [
-    "↑ **Here you can see that bmw and ford is counted only once despite they appear twice in the text**"
+    "    return list(tokens)"
    ]
   },
   {
@@ -17820,14 +17744,6 @@
     "\n",
     "aspr_matrix.sort_values(by = 'is_aspirational', ascending= False)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "32e18609",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
